Use Java 11, as we're dealing with the OCP Java Developer 11 exam here